--- a/view/calendarios.html
+++ b/view/calendarios.html
@@ -61,12 +61,13 @@
     <nav>
         <div id="menu">
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="calendarios.html">CALENDARIO</a></li>
-                <li><a href="shop.html">E-SHOP</a></li>
-                <li><a href="foro.html">FORO</a></li>
-                <li><a href="blog.html">BLOG</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="clima.html">clima</a></li>
+                <li><a href="calendarios.html">calendario</a></li>
+                <li><a href="shop.html">e-shop</a></li>
+                <li><a href="foro.html">foro</a></li>
+                <li><a href="blog.html">blog</a></li>
+                <li><a href="contacto.html">contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -78,13 +79,13 @@
 
                 <h5 class="mt-5">CALENDARIOS</h5>
 
-                <h2 >¡AGENDA TODA LA INFORMACION SOBRE PESCA!</h2>
-            <p>Aqui podras ver y agendar todas las fechas importantes relacionadas a la pesca
-                deportiva, apertura de pesca de cada provincia y eventos importantes no te quedes afuera </p>
-            <br>
+                <h2>¡AGENDA TODA LA INFORMACION SOBRE PESCA!</h2>
+                <p>Aqui podras ver y agendar todas las fechas importantes relacionadas a la pesca
+                    deportiva, apertura de pesca de cada provincia y eventos importantes no te quedes afuera </p>
+                <br>
 
-            <iframe
-                src="
+                <iframe
+                    src="
                     https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%234285F4&ctz=America%2FArgentina%2FBuenos_Aires&src=ZWxhbnp1ZWxvc2l0aW9kZXBlc2NhQGdtYWlsLmNvbQ&src=OTUzY2E3NDJhNDQ1OWYxOTQzZGE0YjJkYWQ4YjA1NGQ0ZmY1ZWQ2OTY3MTJlMjUzZmM3ZGZlYzVlNzg1OWYyNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZXMtNDE5LmFyI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%23F4511E&color=%230B8043"
                     style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
@@ -104,9 +105,11 @@
                 <figure>
                     <img alt="Silverfox" class="img-fluid rounded  " src="./images/blog/pez.jpg">
                 </figure>
-                <h5 class="title4-long-responsive-section izq blue font-bold text-uppercase">Las tarariras ya pican en Entre
+                <h5 class="title4-long-responsive-section izq blue font-bold text-uppercase">Las tarariras ya pican en
+                    Entre
                     Ríos</h5>
-                <p>En septiembre se abre la temporada de hoplias malabaricus, tal el nombre científico de una de las especies
+                <p>En septiembre se abre la temporada de hoplias malabaricus, tal el nombre científico de una de las
+                    especies
                     preferidas por los pescadores deportivos.</p>
 
 
@@ -115,7 +118,8 @@
                 </figure>
                 <h5 class="title4-long-responsive-section izq blue font-bold text-uppercase">Mirá el tiburón de especie
                     desconocida que pescaron en Australia</h5>
-                <p>El extraño e intimidante pez que fue atrapado en las profundidades del mar que rodea a ese país de Oceanía
+                <p>El extraño e intimidante pez que fue atrapado en las profundidades del mar que rodea a ese país de
+                    Oceanía
                     provocó un gran desconcierto entre los expertos debido a sus particulares características.</p>
 
 
