--- a/view/cart.html
+++ b/view/cart.html
@@ -41,19 +41,19 @@
     </div>
   </header>
   <!-- NAV MENU -->
-  <nav class="menu-nav">
+  <nav>
     <div id="menu">
       <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="calendarios.html">CALENDARIO</a></li>
-        <li><a href="shop.html">E-SHOP</a></li>
-        <li><a href="foro.html">FORO</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="foro.html">CONTACTO</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="clima.html">clima</a></li>
+        <li><a href="calendarios.html">calendario</a></li>
+        <li><a href="shop.html">e-shop</a></li>
+        <li><a href="foro.html">foro</a></li>
+        <li><a href="blog.html">blog</a></li>
+        <li><a href="contacto.html">contacto</a></li>
       </ul>
     </div>
   </nav>
-
   <!-- Header / nav -->
   <!-- ================================== -->
   <div class="cart-container">
@@ -223,7 +223,7 @@
             <button type="submit" class="btn btn-secondary">Aplicar</button>
           </div>
         </form>
-        <a href="checkout.html" >
+        <a href="checkout.html">
           <button class="btn-cont mt-3"> Continuar
             <div class="icon">
               <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
