--- a/view/payment.html
+++ b/view/payment.html
@@ -41,18 +41,19 @@
         </div>
     </header>
     <!-- NAV MENU -->
-    <nav class="menu-nav">
+    <nav>
         <div id="menu">
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="calendarios.html">CALENDARIO</a></li>
-                <li><a href="shop.html">E-SHOP</a></li>
-                <li><a href="foro.html">FORO</a></li>
-                <li><a href="blog.html">BLOG</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
-            </ul>
+          <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="clima.html">clima</a></li>
+            <li><a href="calendarios.html">calendario</a></li>
+            <li><a href="shop.html">e-shop</a></li>
+            <li><a href="foro.html">foro</a></li>
+            <li><a href="blog.html">blog</a></li>
+            <li><a href="contacto.html">contacto</a></li>
+          </ul>
         </div>
-    </nav>
+      </nav>
 
     <!-- Header ends -->
     <!-- e-Shop - detalle de envío -->
