--- a/view/product.html
+++ b/view/product.html
@@ -64,15 +64,16 @@
             </div>
         </header>
         <!-- NAV MENU -->
-        <nav class="menu-nav">
+        <nav>
             <div id="menu">
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="calendarios.html">CALENDARIO</a></li>
-                    <li><a href="shop.html">E-SHOP</a></li>
-                    <li><a href="foro.html">FORO</a></li>
-                    <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="contacto.html">CONTACTO</a></li>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="clima.html">clima</a></li>
+                    <li><a href="calendarios.html">calendario</a></li>
+                    <li><a href="shop.html">e-shop</a></li>
+                    <li><a href="foro.html">foro</a></li>
+                    <li><a href="blog.html">blog</a></li>
+                    <li><a href="contacto.html">contacto</a></li>
                 </ul>
             </div>
         </nav>
@@ -101,7 +102,12 @@
 
                 <div id="description">
                     <p>
-                        Blood 9000 Gamma C/ Carrete Extra - 6+1 rulemanes de acero inoxidable - Sin fin de acero inoxidable para un Devanado excelente y prolijo. - Eje y partes de acero inoxidable - Cuerpo extra liviano de carbono de alta resistencia - Diseño de carrete de casting - Corona de potencia - Balanceado por computadora - Sistema de frenado rapido - Rulemanes: 6+1 - Apto para largos lances. - Peso del reel 530 Grs. - 2 Carretes de aluminio. - Manivela rígida de aluminio. - Sistema Anti-reverse infinito. - Gear Ratio 4.6:1 - Capacidad 515 mts - 0,30 mm
+                        Blood 9000 Gamma C/ Carrete Extra - 6+1 rulemanes de acero inoxidable - Sin fin de acero
+                        inoxidable para un Devanado excelente y prolijo. - Eje y partes de acero inoxidable - Cuerpo
+                        extra liviano de carbono de alta resistencia - Diseño de carrete de casting - Corona de potencia
+                        - Balanceado por computadora - Sistema de frenado rapido - Rulemanes: 6+1 - Apto para largos
+                        lances. - Peso del reel 530 Grs. - 2 Carretes de aluminio. - Manivela rígida de aluminio. -
+                        Sistema Anti-reverse infinito. - Gear Ratio 4.6:1 - Capacidad 515 mts - 0,30 mm
 
                     </p>
                 </div>
@@ -114,21 +120,24 @@
 
                 <br />
                 <div class="cart">
-                 <div class="product-cantidad">
-                    <label for="cantidad">
-                        Cantidad:
-                        <input class="product-cantidad" type="number" id="cantidad" placeholder="1" min="1" maxlength="2">
-                      </label>
-                 </div>
+                    <div class="product-cantidad">
+                        <label for="cantidad">
+                            Cantidad:
+                            <input class="product-cantidad" type="number" id="cantidad" placeholder="1" min="1"
+                                maxlength="2">
+                        </label>
+                    </div>
                     <div class="producto-add-cart">
-                        <a href="./cart.html" >
+                        <a href="./cart.html">
                             <button class="btn-add mt-3"> Añadir
-                              <div class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
-                                    <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0z"/>
-                                  </svg>
-                                </svg>
-                              </div>
+                                <div class="icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                                        class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0z" />
+                                    </svg>
+                                    </svg>
+                                </div>
                             </button>
                         </a>
                     </div>
