--- a/view/productos.html
+++ b/view/productos.html
@@ -55,12 +55,13 @@
     <nav>
         <div id="menu">
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="calendarios.html">CALENDARIO</a></li>
-                <li><a href="shop.html">E-SHOP</a></li>
-                <li><a href="foro.html">FORO</a></li>
-                <li><a href="blog.html">BLOG</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="clima.html">clima</a></li>
+                <li><a href="calendarios.html">calendario</a></li>
+                <li><a href="shop.html">e-shop</a></li>
+                <li><a href="foro.html">foro</a></li>
+                <li><a href="blog.html">blog</a></li>
+                <li><a href="contacto.html">contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -206,8 +207,7 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="product.html"
- class="dark-grey-text">Caja
+                            <h5 class="card-title mb-1"><strong><a href="product.html" class="dark-grey-text">Caja
                                         Organizadora
                                         Señuelos
                                         Anzuelos Etc Mauri Nro 25</a></strong>
@@ -253,7 +253,6 @@
                             <!--Category & Title-->
 
                             <h5 class="card-title mb-1"><strong><a href="product.html"
-
                                         class="dark-grey-text">Intercambiador
                                         Señuelos
                                         Z-eeg Quick Snap N°2 Bister 10 Unid</a></strong>
@@ -301,8 +300,7 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="product.html"
- class="dark-grey-text">Reel
+                            <h5 class="card-title mb-1"><strong><a href="product.html" class="dark-grey-text">Reel
                                         rotativo Marine
                                         Sports Caster Power Plus 400 derecho color negro</a></strong>
                             </h5><span class="badge badge-danger mb-2">Reeles</span>
@@ -344,8 +342,7 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="product.html"
- class="dark-grey-text">Reel
+                            <h5 class="card-title mb-1"><strong><a href="product.html" class="dark-grey-text">Reel
                                         frontal Marine
                                         Sports Arena 4000 FD derecho/izquierdo color plateado</a></strong>
                             </h5><span class="badge badge-danger mb-2">Reeles</span>
@@ -389,8 +386,7 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="product.html"
- class="dark-grey-text">Caña Para
+                            <h5 class="card-title mb-1"><strong><a href="product.html" class="dark-grey-text">Caña Para
                                         Reel
                                         Rotativo Marine Sports Laguna 20-40 Lbs</a></strong>
                             </h5><span class="badge badge-danger mb-2">Cañas</span>
@@ -437,8 +433,7 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="product.html"
- class="dark-grey-text">Wader
+                            <h5 class="card-title mb-1"><strong><a href="product.html" class="dark-grey-text">Wader
                                         Pesca</a></strong>
                             </h5><span class="badge badge-danger mb-2">Indumentaria</span>
 
@@ -479,8 +474,7 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="product.html"
- class="dark-grey-text">Gorro
+                            <h5 class="card-title mb-1"><strong><a href="product.html" class="dark-grey-text">Gorro
                                         Sombrero Para
                                         Pesca De Ala Waterdog</a></strong>
                             </h5><span class="badge badge-danger mb-2">Indumentaria</span>
@@ -524,8 +518,7 @@
                         <div class="card-body">
                             <!--Category & Title-->
 
-                            <h5 class="card-title mb-1"><strong><a href="product.html"
- class="dark-grey-text">Botas De
+                            <h5 class="card-title mb-1"><strong><a href="product.html" class="dark-grey-text">Botas De
                                         Neoprene Dago
                                         Pesca Kayac Nautica</a></strong>
                             </h5><span class="badge badge-danger mb-2">Indumentaria</span>
@@ -563,49 +556,49 @@
     <!-- Footer -->
     <footer>
         <div class="container__footer">
-          <div class="box__footer">
-            <div class="logo-footer">
-              <img src="images/identidad/El-anzuelo-logo.png" alt="">
+            <div class="box__footer">
+                <div class="logo-footer">
+                    <img src="images/identidad/El-anzuelo-logo.png" alt="">
+                </div>
+                <div class="subscribe-footer">
+                    <div class="group-subs">
+                        <input type="email" class="input subscribe-footer__input" id="Email" name="Email"
+                            placeholder="Email" autocomplete="off">
+                        <input class="button--submit" value="Subscribite" type="submit">
+                    </div>
+                </div>
             </div>
-            <div class="subscribe-footer">
-              <div class="group-subs">
-                <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
-                  autocomplete="off">
-                <input class="button--submit" value="Subscribite" type="submit">
-              </div>
+            <div class="box__footer">
+                <h2>Soluciones</h2>
+                <a href="https://www.google.com">App Desarrollo</a>
+                <a href="#">App Marketing</a>
+                <a href="#">IOS Desarrollo</a>
+                <a href="#">Android Desarrollo</a>
             </div>
-          </div>
-          <div class="box__footer">
-            <h2>Soluciones</h2>
-            <a href="https://www.google.com">App Desarrollo</a>
-            <a href="#">App Marketing</a>
-            <a href="#">IOS Desarrollo</a>
-            <a href="#">Android Desarrollo</a>
-          </div>
-    
-          <div class="box__footer">
-            <h2>Compañia</h2>
-            <a href="#">Acerca de</a>
-            <a href="#">Trabajos</a>
-            <a href="#">Procesos</a>
-            <a href="#">Servicios</a>
-          </div>
-    
-          <div class="box__footer">
-            <h2>Redes Sociales</h2>
-            <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
-            <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-            <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
-            <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
-          </div>
-    
+
+            <div class="box__footer">
+                <h2>Compañia</h2>
+                <a href="#">Acerca de</a>
+                <a href="#">Trabajos</a>
+                <a href="#">Procesos</a>
+                <a href="#">Servicios</a>
+            </div>
+
+            <div class="box__footer">
+                <h2>Redes Sociales</h2>
+                <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+            </div>
+
         </div>
         <div class="box__copyright">
-          <hr>
-          <p></b>El anzuelo</p>
+            <hr>
+            <p></b>El anzuelo</p>
         </div>
-      </footer>
-    
+    </footer>
+
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
