--- a/view/shop.html
+++ b/view/shop.html
@@ -55,12 +55,13 @@
   <nav>
     <div id="menu">
       <ul>
-        <li><a href="./index.html">HOME</a></li>
-        <li><a href="calendarios.html">CALENDARIO</a></li>
-        <li><a href="shop.html">E-SHOP</a></li>
-        <li><a href="foro.html">FORO</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="contacto.html">CONTACTO</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="clima.html">clima</a></li>
+        <li><a href="calendarios.html">calendario</a></li>
+        <li><a href="shop.html">e-shop</a></li>
+        <li><a href="foro.html">foro</a></li>
+        <li><a href="blog.html">blog</a></li>
+        <li><a href="contacto.html">contacto</a></li>
       </ul>
     </div>
   </nav>
@@ -126,7 +127,8 @@
 
     <div class="cat-container d-flex justify-content-center justify-content-around">
       <div class="col-4 d-flex flex-column align-items-center">
-        <div class="card col-8"> <img class="card-img-top" src="./images/shop/index/shop1.jfif.crdownload" alt="card image cap">
+        <div class="card col-8"> <img class="card-img-top" src="./images/shop/index/shop1.jfif.crdownload"
+            alt="card image cap">
           <div class="card-body">
           </div>
         </div>
