--- a/view/blog.html
+++ b/view/blog.html
@@ -46,6 +46,7 @@
   <!-- Estilos Footer -->
   <link rel="stylesheet" href="./css/footer.css">
 </head>
+
 <body>
 
 
@@ -67,12 +68,13 @@
   <nav>
     <div id="menu">
       <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="calendarios.html">CALENDARIO</a></li>
-        <li><a href="shop.html">E-SHOP</a></li>
-        <li><a href="foro.html">FORO</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="contacto.html">CONTACTO</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="clima.html">clima</a></li>
+        <li><a href="calendarios.html">calendario</a></li>
+        <li><a href="shop.html">e-shop</a></li>
+        <li><a href="foro.html">foro</a></li>
+        <li><a href="blog.html">blog</a></li>
+        <li><a href="contacto.html">contacto</a></li>
       </ul>
     </div>
   </nav>
