--- a/view/checkout.html
+++ b/view/checkout.html
@@ -11,7 +11,7 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- Iconos -->
+  <!-- Iconos -->
   <script src="https://kit.fontawesome.com/f570856479.js" crossorigin="anonymous"></script>
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -27,32 +27,33 @@
 
 <body>
   <!-- Header -->
-    <header>
-      <a ref="index.html" class="logo">
-        <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
+  <header>
+    <a ref="index.html" class="logo">
+      <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
+    </a>
+    <div>
+      <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
+      <i class="fa-solid fa-magnifying-glass menu__search-icon"></i>
+
+      <a href="login-registro.html">
+        <button class="btn-more"><span>Ingresar</span></button>
       </a>
-      <div>
-        <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
-        <i class="fa-solid fa-magnifying-glass menu__search-icon"></i>
-  
-        <a href="login-registro.html">
-          <button class="btn-more"><span>Ingresar</span></button>
-        </a>
-      </div>
-    </header>
-    <!-- NAV MENU -->
-    <nav class="menu-nav">
-      <div id="menu">
-        <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="calendarios.html">CALENDARIO</a></li>
-          <li><a href="shop.html">E-SHOP</a></li>
-          <li><a href="foro.html">FORO</a></li>
-          <li><a href="blog.html">BLOG</a></li>
-          <li><a href="contacto.html">CONTACTO</a></li>
-        </ul>
-      </div>
-    </nav>
+    </div>
+  </header>
+  <!-- NAV MENU -->
+  <nav>
+    <div id="menu">
+      <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="clima.html">clima</a></li>
+        <li><a href="calendarios.html">calendario</a></li>
+        <li><a href="shop.html">e-shop</a></li>
+        <li><a href="foro.html">foro</a></li>
+        <li><a href="blog.html">blog</a></li>
+        <li><a href="contacto.html">contacto</a></li>
+      </ul>
+    </div>
+  </nav>
 
   <!-- Header / nav -->
   <!-- e-Shop - detalle de envío -->
@@ -282,9 +283,10 @@
         </div>
         <div class="subscribe-footer">
           <div class="group-subs">
-            <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email" autocomplete="off">
+            <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
+              autocomplete="off">
             <input class="button--submit" value="Subscribite" type="submit">
-        </div>
+          </div>
         </div>
       </div>
       <div class="box__footer">
