--- a/view/foro.html
+++ b/view/foro.html
@@ -30,35 +30,36 @@
 </head>
 
 <body>
-      <!-- Header -->
-  <header>
-    <a href="index.html" class="logo">
+    <!-- Header -->
+    <header>
+        <a href="index.html" class="logo">
 
-    <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
+            <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
 
-    </a>
-    <div>
-      <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
-      <i class="fa-solid fa-magnifying-glass menu__search-icon"></i>
+        </a>
+        <div>
+            <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
+            <i class="fa-solid fa-magnifying-glass menu__search-icon"></i>
 
-      <a href="login-registro.html">
-        <button class="btn-more"><span>Ingresar</span></button>
-      </a>
-    </div>
-  </header>
-  <!-- NAV MENU -->
-  <nav>
-    <div id="menu">
-      <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="calendarios.html">CALENDARIO</a></li>
-        <li><a href="shop.html">E-SHOP</a></li>
-        <li><a href="foro.html">FORO</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="contacto.html">CONTACTO</a></li>
-      </ul>
-    </div>
-  </nav>
+            <a href="login-registro.html">
+                <button class="btn-more"><span>Ingresar</span></button>
+            </a>
+        </div>
+    </header>
+    <!-- NAV MENU -->
+    <nav>
+        <div id="menu">
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="clima.html">clima</a></li>
+                <li><a href="calendarios.html">calendario</a></li>
+                <li><a href="shop.html">e-shop</a></li>
+                <li><a href="foro.html">foro</a></li>
+                <li><a href="blog.html">blog</a></li>
+                <li><a href="contacto.html">contacto</a></li>
+            </ul>
+        </div>
+    </nav>
     <!--Introduccion-->
     <h1 style="padding-left: 45%;" class="display-1">Foro</h1>
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -272,49 +273,49 @@
     <!-- Footer -->
     <footer>
         <div class="container__footer">
-          <div class="box__footer">
-            <div class="logo-footer">
-              <img src="images/identidad/El-anzuelo-logo.png" alt="">
+            <div class="box__footer">
+                <div class="logo-footer">
+                    <img src="images/identidad/El-anzuelo-logo.png" alt="">
+                </div>
+                <div class="subscribe-footer">
+                    <div class="group-subs">
+                        <input type="email" class="input subscribe-footer__input" id="Email" name="Email"
+                            placeholder="Email" autocomplete="off">
+                        <input class="button--submit" value="Subscribite" type="submit">
+                    </div>
+                </div>
             </div>
-            <div class="subscribe-footer">
-              <div class="group-subs">
-                <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
-                  autocomplete="off">
-                <input class="button--submit" value="Subscribite" type="submit">
-              </div>
+            <div class="box__footer">
+                <h2>Soluciones</h2>
+                <a href="https://www.google.com">App Desarrollo</a>
+                <a href="#">App Marketing</a>
+                <a href="#">IOS Desarrollo</a>
+                <a href="#">Android Desarrollo</a>
             </div>
-          </div>
-          <div class="box__footer">
-            <h2>Soluciones</h2>
-            <a href="https://www.google.com">App Desarrollo</a>
-            <a href="#">App Marketing</a>
-            <a href="#">IOS Desarrollo</a>
-            <a href="#">Android Desarrollo</a>
-          </div>
-    
-          <div class="box__footer">
-            <h2>Compañia</h2>
-            <a href="#">Acerca de</a>
-            <a href="#">Trabajos</a>
-            <a href="#">Procesos</a>
-            <a href="#">Servicios</a>
-          </div>
-    
-          <div class="box__footer">
-            <h2>Redes Sociales</h2>
-            <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
-            <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-            <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
-            <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
-          </div>
-    
+
+            <div class="box__footer">
+                <h2>Compañia</h2>
+                <a href="#">Acerca de</a>
+                <a href="#">Trabajos</a>
+                <a href="#">Procesos</a>
+                <a href="#">Servicios</a>
+            </div>
+
+            <div class="box__footer">
+                <h2>Redes Sociales</h2>
+                <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+            </div>
+
         </div>
         <div class="box__copyright">
-          <hr>
-          <p></b>El anzuelo</p>
+            <hr>
+            <p></b>El anzuelo</p>
         </div>
-      </footer>
-    
+    </footer>
+
 
 
 
