--- a/view/shipping.html
+++ b/view/shipping.html
@@ -11,7 +11,7 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- Iconos -->
+  <!-- Iconos -->
   <script src="https://kit.fontawesome.com/f570856479.js" crossorigin="anonymous"></script>
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -41,15 +41,16 @@
     </div>
   </header>
   <!-- NAV MENU -->
-  <nav class="menu-nav">
+  <nav>
     <div id="menu">
       <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="calendarios.html">CALENDARIO</a></li>
-        <li><a href="shop.html">E-SHOP</a></li>
-        <li><a href="foro.html">FORO</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="contacto.html">CONTACTO</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="clima.html">clima</a></li>
+        <li><a href="calendarios.html">calendario</a></li>
+        <li><a href="shop.html">e-shop</a></li>
+        <li><a href="foro.html">foro</a></li>
+        <li><a href="blog.html">blog</a></li>
+        <li><a href="contacto.html">contacto</a></li>
       </ul>
     </div>
   </nav>
