--- a/view/index.html
+++ b/view/index.html
@@ -171,7 +171,7 @@
     <h3 class="headline back text-white">REGISTRATE A NUESTRO NEWSLETTER</h3>
     <form class="main-form " method="post" action="./">
       <input id="email" class="width" name="email" type="text" placeholder="Introduzca su e-mail" />
-      <button type="button" class="btn btn-more btn-outline-secondary btn-lg">REGISTRARSE</button>
+      <button type="button" class="btn btn-news btn-outline-secondary btn-lg">REGISTRARSE</button>
     </form>
   </div>
 
