Primer presentación de contenido

--- a/view/clima.html
+++ b/view/clima.html
@@ -99,33 +99,29 @@
             <iframe src="https://www.tutiempo.net/s-widget/app/?LocId=3768&sc=1" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:411px;" allowtransparency="true"></iframe>
         </div>
         <p>Enlace a MAPA CLIMÁTICO</p>
-        <a rel="MapaTutiempo" href="https://mapa.tutiempo.net/#-37.19533;-60.83679;7">
+        <a target="_blank" href="https://mapa.tutiempo.net/#-37.19533;-60.83679;7">
             MAPAClima
-        </a>
-    </section>
-    <section>    
+        </a>    
         <br>
         <p>Pagina windguru sobre vientos, y enlace a explicación sobre como interpretarlo</p>
         <a target="_blank" href="https://www.windguru.cz">WINDGURU</a>
         <br>
-        <a = target="_blank" href="https://xsurf.es/como-interpretar-windguru/">
-            <text><br>Aprender a interpretar WINDGURU<br></text>
+        <a target="_blank" href="https://xsurf.es/como-interpretar-windguru/">
+            Aprender a interpretar WINDGURU
         </a>
         <br>
-    </section>
-    <section>
         <br>
         <p>
             Mareas
         </p>
         <br>
-        <a ="target="_blank" href="https://www.windguru.cz/map/tide/?lat=-37.7139996440031&lon=-59.89369535399976&zoom=5.023262737331681">
+        <a target="_blank" href="https://www.windguru.cz/map/tide/?lat=-37.7139996440031&lon=-59.89369535399976&zoom=5.023262737331681">
             Enlace informativo de mareas
         </a>
-    </section>
-    <section>
         <p>Calendario Lunar</p>
-        <iframe src="https://www.tutiempo.net/s-widget/moon/000000l1s/" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:750px; height:830px;"></iframe>
+        <div>
+            <iframe src="https://www.tutiempo.net/s-widget/moon/000000l1s/" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:750px; height:830px;"></iframe>
+        </div>
         <br>
         <p>Widget luna para distinta secciones</p>
         <div id="contain_moon" style="text-align:center;padding-top:5px;padding-bottom:5px;">
