Agregue la pestaña Clima a lista

--- a/view/clima.html
+++ b/view/clima.html
@@ -50,6 +50,7 @@
             <li><a href="foro.html">FORO</a></li>
             <li><a href="blog.html">BLOG</a></li>
             <li><a href="contacto.html">CONTACTO</a></li>
+            <li><a href="clima.html">CLIMA</a></li>
         </ul>
         </div>
     </nav>
