--- a/view/shop.html
+++ b/view/shop.html
@@ -61,6 +61,7 @@
         <li><a href="foro.html">FORO</a></li>
         <li><a href="blog.html">BLOG</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
+        <li><a href="clima.html">CLIMA</a></li>
       </ul>
     </div>
   </nav>
