--- a/view/index.html
+++ b/view/index.html
@@ -58,7 +58,7 @@
     <div id="menu">
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="clima.html">clima</a></li>
+        <li><a href="clima.html">Clima</a></li>
         <li><a href="calendarios.html">calendario</a></li>
         <li><a href="shop.html">e-shop</a></li>
         <li><a href="foro.html">foro</a></li>
