Separar registro y login

--- a/view/css/login.css
+++ b/view/css/login.css
@@ -59,57 +59,12 @@ h6 span {
   min-height: 80vh;
 }
 
-[type="checkbox"]:checked,
-[type="checkbox"]:not(:checked) {
-  position: absolute;
-  left: -9999px;
-}
-
-.checkbox:checked+label,
-.checkbox:not(:checked)+label {
-  position: relative;
-  display: block;
-  text-align: center;
-  width: 80px;
-  height: 16px;
-  border-radius: 8px;
-  padding: 0;
-  margin: 10px auto;
-  cursor: pointer;
-  background-color: #fff;
-}
-
-.checkbox:checked+label:before,
-.checkbox:not(:checked)+label:before {
-  position: absolute;
-  display: block;
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  color: transparent;
-  background-color: #323ea7;
-  font-family: 'unicons';
-  content: '.';
-  z-index: 20;
-  top: -10px;
-  left: -10px;
-  line-height: 36px;
-  text-align: center;
-  font-size: 24px;
-  transition: all 0.5s ease;
-}
-
-.checkbox:checked+label:before {
-  transform: translateX(60px) rotate(-270deg);
-}
 
 .card-3d-wrap {
   position: relative;
   width: 440px;
   max-width: 100%;
   height: 400px;
-  transform-style: preserve-3d;
-  perspective: 800px;
   margin-top: 60px;
 }
 
@@ -119,12 +74,9 @@ h6 span {
   position: absolute;
   top: 0;
   left: 0;
-  transform-style: preserve-3d;
-  transition: all 600ms ease-out;
 }
 
-.card-front,
-.card-back {
+.card-front{
   width: 100%;
   height: 100%;
   background-color: #ffffff;
@@ -136,16 +88,6 @@ h6 span {
   border-radius: 6px;
   left: 0;
   top: 0;
-  transform-style: preserve-3d;
-  backface-visibility: hidden;
-}
-
-.card-back {
-  transform: rotateY(180deg);
-}
-
-.checkbox:checked~.card-3d-wrap .card-3d-wrapper {
-  transform: rotateY(180deg);
 }
 
 .center-wrap {
