--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -33,10 +33,7 @@
       <div class="container">
         <div class="row full-height justify-content-center">
           <div class="col-12 text-center align-self-center py-3">
-            <div class="section pb-5 pt-5 pt-sm-2 text-center">
-              <h6 class="mb-0 pb-2"><span>Ingresar</span><span>Registrarse</span></h6>
-              <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
-              <label for="reg-log"></label>
+            <div class="section pb-5 pt-5 pt-sm-2 text-center">           
               <div class="card-3d-wrap mx-auto">
                 <div class="card-3d-wrapper">
                   <div class="card-front">
@@ -56,38 +53,10 @@
                         <a href="./index.html"><button class="btn mt-4"><span>Ingresar</span></button></a>
                         <p class="mb-0 mt-4 text-center"><a href="./reset-password.html" class="link">¿Olvidaste tu
                             constraseña?</a></p>
+                            <p class="mb-0 mt-0 text-center"><a href="./registro.html" class="link">Registrate</a></p>
                       </div>
                     </div>
                   </div>
-                  <!-- Registro -->
-                  <div class="card-back">
-                    <div class="center-wrap">
-                      <div class="section text-center">
-                        <h4 class="mb-2 pb-3">Resgistrarse</h4>
-                        <div class="form-group">
-                          <input type="text" name="sign-name" class="form-style" placeholder="Nombre" id="sign-name"
-                            required>
-                          <i class="input-icon bi-person-circle"></i>
-                        </div>
-                        <div class="form-group mt-2">
-                          <input type="text" name="sign-apellido" class="form-style" placeholder="Apellido"
-                            id="sign-apellido" required>
-                          <i class="input-icon bi-person-circle"></i>
-                        </div>
-                        <div class="form-group mt-2">
-                          <input type="email" name="sign-mail" class="form-style" placeholder="Email" id="sign-mail"
-                            required>
-                          <i class="input-icon bi-envelope"></i>
-                        </div>
-                        <div class="form-group mt-2">
-                          <input type="password" name="sign-pass" class="form-style" placeholder="Contraseña"
-                            id="sign-pass" autocomplete="off" required>
-                          <i class="input-icon bi bi-key"></i>
-                        </div>
-                        <a href="login-registro.html">
-                          <button class="mt-4 btn"><span>Registrarse</span></button> </a>
-                      </div>
-                    </div>
                   </div>
                 </div>
               </div>
