cambios y referencias division de secciones

--- a/view/Clima-luna.html
+++ b/view/Clima-luna.html
@@ -26,8 +26,8 @@
     <!-- Estilos Footer -->
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/clima.css">
-    </head>
-    <body>
+</head>
+<body>
     <!-- Header -->
     <header>
         <a href="index.html" class="logo">
@@ -55,19 +55,30 @@
         </ul>
         </div>
     </nav>
-    </section>
-    
-/*--------------------------MI Seccion del CLIMA----------------------------*/
+
+<!--------------------------MI Seccion del CLIMA---------------------------->    
     <section>
         <div class="conteiner_clima">
-            
-        <p>
-            Mareas
-        </p>
+        <p>Calendario Lunar</p>
+        <div>
+            <iframe src="https://www.tutiempo.net/s-widget/moon/000000l1s/" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:750px; height:830px;"></iframe>
+        </div>
         <br>
-        <a target="_blank" href="https://www.windguru.cz/map/tide/?lat=-37.7139996440031&lon=-59.89369535399976&zoom=5.023262737331681">
-            Enlace informativo de mareas
-        </a>
+        <p>Widget luna para distinta secciones</p>
+        <div id="contain_moon" style="text-align:center;padding-top:5px;padding-bottom:5px;">
+            <div style="font-weight:bold">La Luna hoy</div>
+                <div style="margin-top:-7px;margin-bottom:-15px;padding:30px;filter:drop-shadow(0 0 30px hsl(220,100%,15%))"></div>
+                <div>
+                    .
+                </div>
+                <div style="font-size:small">
+                    Aquí
+                </div>
+            </div>
+            <script>
+                (function(){var d=new Date().getDate();var m=document.querySelectorAll("#contain_moon div");var a=new XMLHttpRequest();var url="https://www.icalendar37.net/lunar/api/?lang=es&month="+(new Date().getMonth()+1)+"&year="+(new Date().getFullYear())+"&size=100&lightColor=rgb(245,245,245)&shadeColor=rgb(17,17,17)&LDZ="+new Date(new Date().getFullYear(),new Date().getMonth(),1)/1000+"";m[1].style.height="100px";a.onreadystatechange=function(){if(a.readyState==4&&a.status==200){var b=JSON.parse(a.responseText);m[1].innerHTML=b.phase[d].svg;if(typeof moon_widget_loaded=="function")moon_widget_loaded(b);m[2].innerHTML=b.phase[d].npWidget;m[3].innerHTML="Próxima luna llena<br>"+b.nextFullMoon}};a.open("GET",url,true);a.send()})()
+            </script>
+        
 
     </section>
     <footer>
