--- a/view/clima-marea.html
+++ b/view/clima-marea.html
@@ -26,8 +26,8 @@
     <!-- Estilos Footer -->
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/clima.css">
-    </head>
-    <body>
+</head>
+<body>
     <!-- Header -->
     <header>
         <a href="index.html" class="logo">
@@ -55,66 +55,63 @@
         </ul>
         </div>
     </nav>
-    </section>
     
-/*--------------------------MI Seccion del CLIMA----------------------------*/
+<!--------------------------MI Seccion del CLIMA---------------------------->
     <section>
         <div class="conteiner_clima">
-            
-        <p>Pagina windguru sobre vientos, y enlace a explicación sobre como interpretarlo</p>
-        <a target="_blank" href="https://www.windguru.cz">WINDGURU</a>
-        <br>
-        <a target="_blank" href="https://xsurf.es/como-interpretar-windguru/">
-            Aprender a interpretar WINDGURU
-        </a>
-
-        
-
+            <p>
+                Mareas
+            </p>
+            <br>
+            <a target="_blank" href="https://www.windguru.cz/map/tide/?lat=-37.7139996440031&lon=-59.89369535399976&zoom=5.023262737331681">
+                Enlace informativo de mareas
+            </a>
+        </div>
     </section>
     <footer>
-    <div class="container__footer">
-        <div class="box__footer">
-            <div class="logo-footer">
-            <img src="images/identidad/El-anzuelo-logo.png" alt="">
+        <div class="container__footer">
+            <div class="box__footer">
+                <div class="logo-footer">
+                <img src="images/identidad/El-anzuelo-logo.png" alt="">
+                </div>
+                <div class="subscribe-footer">
+                <div class="group-subs">
+                    <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
+                    autocomplete="off">
+                    <input class="button--submit" value="Subscribite" type="submit">
+                </div>
+                </div>
             </div>
-            <div class="subscribe-footer">
-            <div class="group-subs">
-                <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
-                autocomplete="off">
-                <input class="button--submit" value="Subscribite" type="submit">
+            <div class="box__footer">
+                <h2>Soluciones</h2>
+                <a href="https://www.google.com">App Desarrollo</a>
+                <a href="#">App Marketing</a>
+                <a href="#">IOS Desarrollo</a>
+                <a href="#">Android Desarrollo</a>
+            </div>
+            <div class="box__footer">
+                <h2>Compañia</h2>
+                <a href="#">Acerca de</a>
+                <a href="#">Trabajos</a>
+                <a href="#">Procesos</a>
+                <a href="#">Servicios</a>
+            </div>
+            <div class="box__footer">
+                <h2>Redes Sociales</h2>
+                <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
             </div>
             </div>
-        </div>
-        <div class="box__footer">
-            <h2>Soluciones</h2>
-            <a href="https://www.google.com">App Desarrollo</a>
-            <a href="#">App Marketing</a>
-            <a href="#">IOS Desarrollo</a>
-            <a href="#">Android Desarrollo</a>
-        </div>
-        <div class="box__footer">
-            <h2>Compañia</h2>
-            <a href="#">Acerca de</a>
-            <a href="#">Trabajos</a>
-            <a href="#">Procesos</a>
-            <a href="#">Servicios</a>
-        </div>
-        <div class="box__footer">
-            <h2>Redes Sociales</h2>
-            <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
-            <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-            <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
-            <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
-        </div>
-        </div>
-        <div class="box__copyright">
-        <hr>
-        <p></b>El anzuelo</p>
-        </div>
-    </footer>
-    <!--Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+            <div class="box__copyright">
+            <hr>
+            <p></b>El anzuelo</p>
+            </div>
+        </footer>
+        <!--Bootstrap-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </body>
 </html>
