--- a/view/clima-viento.html
+++ b/view/clima-viento.html
@@ -26,8 +26,8 @@
     <!-- Estilos Footer -->
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/clima.css">
-</head>
-<body>
+    </head>
+    <body>
     <!-- Header -->
     <header>
         <a href="index.html" class="logo">
@@ -56,7 +56,7 @@
         </div>
     </nav>
     
-<!-- SECCION CLIMA - CALENDARIOS ================================-->
+<!--------------------------MI Seccion del CLIMA---------------------------->
     <section>
         <div class="container clima-calendario d-flex flex-column align-items-center mt-5">
 
@@ -72,13 +72,13 @@
         <div class="row d-flex justify-content-between ">
             <div class="col-lg-2 text-center">
                 <img src="images/clima/clima.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title><img src="/images/clima/clima.jpg"></title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
-                <h2 class="fw-normal">Temperatura</h2>
+                <h2 class="fw-normal">Clima</h2>
                 <p>Toda la información sobre el clima y condiciónes del ambiente aquí.</p>
                 <p><a class="btn btn-secondary" href="clima-temperatura.html">IR &raquo;</a></p>
             </div>
             <div class="col-lg-2 text-center">
                 <img src="images/clima/viento.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
-                <h2 class="fw-normal">Viento</h2>
+                <h2 class="fw-normal">Vientos</h2>
                 <p>Aquí encontrarás la información necesaria sobre los vientos para planear mejor tus salidas pesqueras.</p>
                 <p><a class="btn btn-secondary" href="clima-viento.html">IR &raquo;</a></p>
             </div>
@@ -101,14 +101,21 @@
                 <p><a class="btn btn-secondary" href="calendarios.html">IR &raquo;</a></p>
             </div>
         </div>
+        <div class="conteiner_clima">    
+            <p>Pagina windguru sobre vientos, y enlace a explicación sobre como interpretarlo</p>
+            <a target="_blank" href="https://www.windguru.cz">WINDGURU</a>
+            <br>
+            <a target="_blank" href="https://xsurf.es/como-interpretar-windguru/">
+                Aprender a interpretar WINDGURU
+            </a>
+        </div>
     </section>
-
-        <footer>
-            <div class="container__footer">
-                <div class="box__footer">
-                    <div class="logo-footer">
-                        <img src="images/identidad/El-anzuelo-logo.png" alt="">
-                    </div>
+    <footer>
+        <div class="container__footer">
+            <div class="box__footer">
+                <div class="logo-footer">
+                    <img src="images/identidad/El-anzuelo-logo.png" alt="">
+                </div>
                 <div class="subscribe-footer">
                     <div class="group-subs">
                         <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
@@ -138,15 +145,15 @@
                 <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
                 <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
             </div>
-            </div>
-            <div class="box__copyright">
+        </div>
+        <div class="box__copyright">
             <hr>
             <p></b>El anzuelo</p>
-            </div>
-        </footer>
+        </div>
+    </footer>
     <!--Bootstrap-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
