--- a/view/clima.html
+++ b/view/clima.html
@@ -57,96 +57,210 @@
     </nav>
     
 <!-- SECCION CLIMA - CALENDARIOS ================================-->
-    <section>
-        <div class="container clima-calendario d-flex flex-column align-items-center mt-5">
-
-    <!-- Three columns of text below the carousel -->
-            <div class="calendario__text col-md-6 mb-4">
-                <h2 class="calendario__text__title text-center">Clima y calendarios</h2>
-                <p class="calenario__text__description">Conoce más acerca de las condiciones climáticas de la zona y también enterate de las condiciones del viento,
-                    la marea, las fases lunares y los proximos eventos a disputarse en las distintas localidades de pesca y mucho más info de la que creas necesitar!
-                </p>
-
-            </div>
-        </div>
-        <div class="row d-flex justify-content-between ">
-            <div class="col-lg-2 text-center">
-                <img src="images/clima/clima.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title><img src="/images/clima/clima.jpg"></title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
-                <h2 class="fw-normal">Temperatura</h2>
-                <p>Toda la información sobre el clima y condiciónes del ambiente aquí.</p>
-                <p><a class="btn btn-secondary" href="clima-temperatura.html">IR &raquo;</a></p>
-            </div>
-            <div class="col-lg-2 text-center">
-                <img src="images/clima/viento.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
-                <h2 class="fw-normal">Viento</h2>
-                <p>Aquí encontrarás la información necesaria sobre los vientos para planear mejor tus salidas pesqueras.</p>
-                <p><a class="btn btn-secondary" href="clima-viento.html">IR &raquo;</a></p>
-            </div>
-            <div class="col-lg-2 text-center">
-                <img src="images/clima/marea.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
-                <h2 class="fw-normal">Marea</h2>
-                <p>Entérate como esta la condición de la marea sobre la costa.</p>
-                <p><a class="btn btn-secondary" href="clima-marea.html">IR &raquo;</a></p>
-            </div>
-            <div class="col-lg-2 text-center">
-                <img src="images/clima/luna.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
-                <h2 class="fw-normal">Luna</h2>
-                <p>Dicen que conocer las fases lunares es una ventaja a la hora de practicar este deporte, aprende más aquí.</p>
-                <p><a class="btn btn-secondary" href="clima-luna.html">IR &raquo;</a></p>
-            </div>
-            <div class="col-lg-2 text-center">
-                <img src="images/clima/apertura-pesca.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
-                <h2 class="fw-normal">Apertura Pesca</h2>
-                <p>Conoce más sobre torneos, eventos pasados y futuros, y más curiosidades aquí.</p>
-                <p><a class="btn btn-secondary" href="calendarios.html">IR &raquo;</a></p>
-            </div>
-        </div>
-    </section>
-
-        <footer>
-            <div class="container__footer">
-                <div class="box__footer">
-                    <div class="logo-footer">
-                        <img src="images/identidad/El-anzuelo-logo.png" alt="">
-                    </div>
-                <div class="subscribe-footer">
-                    <div class="group-subs">
-                        <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
-                        autocomplete="off">
-                        <input class="button--submit" value="Subscribite" type="submit">
-                    </div>
+    <div class="btn-group" role="group" style="text-align: center; padding-left: 750px; padding-top: 10px;">
+        <section>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseTemperatura" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  Temperatura
+                </a>    
+            </p>
+            <div class="collapse" id="collapseTemperatura">
+                <div class="card card-body">
+                    <section>
+                        <p>Widget de clima</p>
+                        <div>
+                            <div id="ww_8f4cc25f54a43" v='1.3' loc='auto' a='{"t":"horizontal","lang":"es","ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'><a href="https://sharpweather.com/es/widgets/" id="ww_8f4cc25f54a43_u" target="_blank">Widget de tiempo para el sitio web</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_8f4cc25f54a43"></script><!-- tutiempo.net - Ancho:300px - Alto:411px -->
+                            <div id="TTPW_gsYL">El tiempo - Tutiempo.net</div>
+                            <script type="text/javascript">
+                            function IniciarCargaTiempoIP()
+                            {
+                            var ScriptOriginal = "https://www.tutiempo.net/s-widget/pw/fgsYL/C10/";
+                            var xhttp = new XMLHttpRequest();
+                                xhttp.onreadystatechange = function()
+                                {
+                                    if(this.readyState == 4 && this.status == 200)
+                                    {
+                                    var data = JSON.parse(this.responseText);
+                                    var res = data.loc.split(",");
+                                    var imported = document.createElement('script');
+                                    if(res[0] && res[1]){imported.src = ScriptOriginal+res[0]+','+res[1];}
+                                    else{imported.src = ScriptOriginal;}
+                                    document.head.appendChild(imported);
+                                    }
+                                };
+                            xhttp.open("GET","https://ipinfo.io/json",true);
+                            xhttp.send();
+                            }
+                            IniciarCargaTiempoIP();
+                            </script>
+                        </div>
+                        <br>
+                        <p>Otro Widget</p>
+                        <div>
+                            <iframe src="https://www.tutiempo.net/s-widget/app/?LocId=3768&sc=1" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:411px;" allowtransparency="true"></iframe>
+                        </div>
+                        <p>Enlace a MAPA CLIMÁTICO</p>
+                        <a target="_blank" href="https://mapa.tutiempo.net/#-37.19533;-60.83679;7">
+                            MAPAClima
+                        </a>
+                    </section>
                 </div>
             </div>
+        </section>
+    <!--Collapse viento-->
+        <section>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseViento" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Viento
+                </a>    
+            </p>
+            <div class="collapse" id="collapseViento">
+                <div class="card card-body">
+                    <section>
+                        <p>Pagina windguru sobre vientos, y enlace a explicación sobre como interpretarlo</p>
+                        <a target="_blank" href="https://www.windguru.cz">
+                            WINDGURU
+                        </a>
+                        <br>
+                        <a target="_blank" href="https://xsurf.es/como-interpretar-windguru/">
+                            Aprender a interpretar WINDGURU
+                        </a>
+                    </section>
+                </div>
+            </div>
+        </section>
+    <!--Collapse marea-->
+        <section>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseMarea" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Marea
+                </a>    
+            </p>
+            <div class="collapse" id="collapseMarea">
+                <div class="card card-body">
+                    <section>
+                        <p>
+                            Marea
+                        </p>
+                        <br>
+                        <a target="_blank" href="https://www.windguru.cz/map/tide/?lat=-37.7139996440031&lon=-59.89369535399976&zoom=5.023262737331681">
+                            Enlace informativo de mareas
+                        </a>
+                    </section>
+                </div>
+            </div>
+        </section>
+    <!--Collapse luna-->
+        <section>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseLuna" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    Fases de la Luna
+                </a>    
+            </p>
+            <div class="collapse" id="collapseLuna">
+                <div class="card card-body">
+                    <section>
+                        <p>Calendario Lunar</p>
+                        <div>
+                            <iframe src="https://www.tutiempo.net/s-widget/moon/000000l1s/" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:750px; height:830px;"></iframe>
+                        </div>
+                        <br>
+                        <p>Widget luna para distinta secciones</p>
+                        <div id="contain_moon" style="text-align:center;padding-top:5px;padding-bottom:5px;">
+                            <div style="font-weight:bold">La Luna hoy</div>
+                                <div style="margin-top:-7px;margin-bottom:-15px;padding:30px;filter:drop-shadow(0 0 30px hsl(220,100%,15%))">
+                                </div>
+                                <div>
+                                    .
+                                </div>
+                            <div style="font-size:small">
+                                Aquí
+                            </div>
+                        </div>
+                        <script>
+                            (function(){var d=new Date().getDate();var m=document.querySelectorAll("#contain_moon div");var a=new XMLHttpRequest();var url="https://www.icalendar37.net/lunar/api/?lang=es&month="+(new Date().getMonth()+1)+"&year="+(new Date().getFullYear())+"&size=100&lightColor=rgb(245,245,245)&shadeColor=rgb(17,17,17)&LDZ="+new Date(new Date().getFullYear(),new Date().getMonth(),1)/1000+"";m[1].style.height="100px";a.onreadystatechange=function(){if(a.readyState==4&&a.status==200){var b=JSON.parse(a.responseText);m[1].innerHTML=b.phase[d].svg;if(typeof moon_widget_loaded=="function")moon_widget_loaded(b);m[2].innerHTML=b.phase[d].npWidget;m[3].innerHTML="Próxima luna llena<br>"+b.nextFullMoon}};a.open("GET",url,true);a.send()})()
+                        </script>
+                    </section>
+                </div>
+            </div>    
+        </section>
+        <section>
+            <div id="TTPW_gsYL">
+                <br>
+                <br>
+                <br>
+                El tiempo - Tutiempo.net
+            </div>
+            <script type="text/javascript">
+                function IniciarCargaTiempoIP()
+                {
+                var ScriptOriginal = "https://www.tutiempo.net/s-widget/pw/fgsYL/C10/";
+                var xhttp = new XMLHttpRequest();
+                xhttp.onreadystatechange = function()
+                {
+                if(this.readyState == 4 && this.status == 200)
+                {
+                var data = JSON.parse(this.responseText);
+                var res = data.loc.split(",");
+                var imported = document.createElement('script');
+                if(res[0] && res[1]){imported.src = ScriptOriginal+res[0]+','+res[1];}
+                else{imported.src = ScriptOriginal;}
+                document.head.appendChild(imported);
+                }
+                };
+                xhttp.open("GET","https://ipinfo.io/json",true);
+                xhttp.send();
+                }
+                IniciarCargaTiempoIP();
+            </script>
+        </section>
+    </div>
+    
+<!--Footer-->
+    <footer>
+        <div class="container__footer">
             <div class="box__footer">
-                <h2>Soluciones</h2>
-                <a href="https://www.google.com">App Desarrollo</a>
-                <a href="#">App Marketing</a>
-                <a href="#">IOS Desarrollo</a>
-                <a href="#">Android Desarrollo</a>
+                <div class="logo-footer">
+                    <img src="images/identidad/El-anzuelo-logo.png" alt="">
+                </div>
+            <div class="subscribe-footer">
+                <div class="group-subs">
+                    <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
+                    autocomplete="off">
+                    <input class="button--submit" value="Subscribite" type="submit">
+                </div>
             </div>
-            <div class="box__footer">
-                <h2>Compañia</h2>
-                <a href="#">Acerca de</a>
-                <a href="#">Trabajos</a>
-                <a href="#">Procesos</a>
-                <a href="#">Servicios</a>
-            </div>
-            <div class="box__footer">
-                <h2>Redes Sociales</h2>
-                <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
-                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
-                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
-            </div>
-            </div>
-            <div class="box__copyright">
-            <hr>
-            <p></b>El anzuelo</p>
-            </div>
-        </footer>
-    <!--Bootstrap-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+        </div>
+        <div class="box__footer">
+            <h2>Soluciones</h2>
+            <a href="https://www.google.com">App Desarrollo</a>
+            <a href="#">App Marketing</a>
+            <a href="#">IOS Desarrollo</a>
+            <a href="#">Android Desarrollo</a>
+        </div>
+        <div class="box__footer">
+            <h2>Compañia</h2>
+            <a href="#">Acerca de</a>
+            <a href="#">Trabajos</a>
+            <a href="#">Procesos</a>
+            <a href="#">Servicios</a>
+        </div>
+        <div class="box__footer">
+            <h2>Redes Sociales</h2>
+            <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+            <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+            <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+            <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+        </div>
+        </div>
+        <div class="box__copyright">
+        <hr>
+        <p></b>El anzuelo</p>
+        </div>
+    </footer>
+<!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
